--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -44,10 +45,11 @@
         <main class="content content__cast">
             <article>
 
-                <h1 class="title-cast">Meet the crew!</h1>
+                <h1 class="title title--smaller">Meet the crew!</h1>
+                <div class="banner"></div>
 
                 <section class="section">
-                    <h3 class="section__title cast__element__title" id="matt_damon">Matt Damon</h3>
+                    <h2 class="section__title" id="matt_damon">Matt Damon</h2>
                     <img src="images/matt_damon.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Matt Damon is an exceptional American actor who has graced the screens in numerous blockbuster hits. Interestingly, he began his career in the late 1980s with minor roles in both films and television shows. However, he gained widespread recognition for his breakout performance in "Good Will Hunting", which he co-wrote with his friend and fellow actor, Ben Affleck. The film was a commercial success, and Damon earned an Academy Award for Best Original Screenplay, along with a nomination for Best Actor.
@@ -63,7 +65,7 @@
                 </section>
 
                 <section class="section">
-                    <h3 class="section__title cast__element__title" id="jessica_chastain">Jessica Chastain</h3>
+                    <h2 class="section__title cast__element__title" id="jessica_chastain">Jessica Chastain</h2>
                     <img src="images/jessica_chastain.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Jessica Chastain's movies was Born on March 24, 1977, in Sacramento, California, the American actress first appeared on TV in the mid-2000s with roles in "ER" and "Veronica Mars." But it was her role in "The Tree of Life" in 2011 that got her nominated for a Golden Globe for Best Supporting Actress.
@@ -77,7 +79,7 @@
                 </section>
 
                 <section class="section">
-                    <h3 class="section__title cast__element__title" id="kristen_wiig">Kristen Wiig</h3>
+                    <h2 class="section__title cast__element__title" id="kristen_wiig">Kristen Wiig</h2>
                     <img src="images/kristen_wiig.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Kristen Wiig is an actress and comedian. She was born on August 22, 1973, in Canandaigua, New York.
