--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <!-- Moet voor elke pagina apart -->
         <title>The Martian | Homepage</title>
-        <meta name="description" content="">
+        <meta name="description" content="The landing page of this website is the perfect place to learn all about the epic movie The Martian. It contains a section dedicated to the movie itself, highlighting its thrilling plot and the incredible cast. In addition, it provides information about each of the actors and their roles in the movie, as well as a comprehensive overview of the movie's themes and its impact. You can also find reviews and awards that the movie has received. All of this information is sure to give you an in-depth look at the movie and its impact on the world.">
+        <meta name="keywords" content="Martian, Movie, Plot, Cast, Reviews">
 
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -213,17 +214,7 @@
                     </figure>
                 </section>
 
-                <section class="section movie-links">
-                    <h2 class="section__title">Stay Connected</h2>
-                    <p class="subtitle">Follow 'The Martian' on Social Media and Visit the Official Website:</p>
-                    <div class="movie-links__block">
-                        <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian"><img src="images/www_icon.svg" class="movie-links__img"></a>
-                        <a class="movie-links__link" href="https://twitter.com/MartianMovie"><img src="images/tw_icon.svg" class="movie-links__img"></a>
-                        <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/"><img src="images/fb_icon.svg" class="movie-links__img"></a>
-                        <a class="movie-links__link" href="https://www.instagram.com/martianmovie/"><img src="images/in_icon.svg" class="movie-links__img"></a>
-                        <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies"><img src="images/yt_icon.svg" class="movie-links__img"></a>
-                    </div>
-                </section>
+
 
 
             </article>
@@ -231,7 +222,17 @@
 
         <!-- footer is for copyright or contact or something like that and is shared among pages -->
         <footer>
-
+            <section class="section section--dark section--top-rounded movie-links">
+                <h2 class="section__title">Stay Connected</h2>
+                <p class="subtitle">Follow 'The Martian' on Social Media and Visit the Official Website:</p>
+                <div class="movie-links__block">
+                    <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian"><img src="images/www_icon.svg" class="movie-links__img"></a>
+                    <a class="movie-links__link" href="https://twitter.com/MartianMovie"><img src="images/tw_icon.svg" class="movie-links__img"></a>
+                    <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/"><img src="images/fb_icon.svg" class="movie-links__img"></a>
+                    <a class="movie-links__link" href="https://www.instagram.com/martianmovie/"><img src="images/in_icon.svg" class="movie-links__img"></a>
+                    <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies"><img src="images/yt_icon.svg" class="movie-links__img"></a>
+                </div>
+            </section>
         </footer>
     </body>
 </html>
