--- a/Assignment1/ratings.html
+++ b/Assignment1/ratings.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -45,7 +46,7 @@
         <main class="content">
             <article id="ratings">
                 <h1 class="title">Ratings</h1>
-
+                <div class="banner"></div>
                 <section class="section">
                     <table class="table">
                         <thead class="table__header">
