--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -44,7 +44,11 @@
             </nav>
         </header>
         <main class="content">
-
+            <article>
+                <figure class="banner">
+                    <img class="banner__img" src="images/banner.jpg" alt="">
+                </figure>
+            </article>
         </main>
         <footer>
 
