--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -56,12 +56,12 @@
                 <figure class="banner">
                     <img class="banner__img" src="images/banner.jpg" alt="">
                 </figure>
-
+                
 
                 <h1 class="title title--white">The Martian</h1>
 
                 <!-- Refactored -->
-                <section class="section">
+                <section class="section introduction">
                     <h2 class="section__title">Bring Him Home!</h2>
                     <p class="section__paragraph">
                         The martian is a science fiction movie directed by Ridley Scott and starring Matt Damon as Mark Watney,
@@ -125,7 +125,7 @@
                 </section>
 
                 <!-- Refactored -->
-                <section class="section">
+                <section class="section movie-info">
                     <h2 class="section__title">Movie Info</h2>
                     <table class="table">
                         <tbody class="table__body">
@@ -186,6 +186,7 @@
                     </table>
                 </section>
 
+                <!-- Refactored -->
                 <section class="section reviews">
                     <h2 class="section__title">Movie Reviews</h2>
                     <figure class="reviews__review">
@@ -213,9 +214,6 @@
                         </figcaption>
                     </figure>
                 </section>
-
-
-
 
             </article>
         </main>
