--- a/Assignment1/ratings.html
+++ b/Assignment1/ratings.html
@@ -19,7 +19,7 @@
 
             <!-- Logo can come here -->
             <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;"/>
+                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;">
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -45,6 +45,9 @@
         </header>
         <main class="content">
             <article id="ratings">
+                <figure class="banner">
+                    <img class="banner__img" src="images/banner.jpg" alt="">
+                </figure>
                 <h1 class="title">Ratings</h1>
                 <div class="banner"></div>
                 <section class="section">
