--- a/Assignment1/summary.html
+++ b/Assignment1/summary.html
@@ -45,6 +45,9 @@
         </header>
         <main class="content">
             <article id="synopsis">
+                <figure class="banner">
+                    <img class="banner__img" src="images/banner.jpg" alt="">
+                </figure>
                 <h1>Synopsis</h1>
                 <section class="section">
 
