--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -45,8 +45,10 @@
         <main class="content content__cast">
             <article>
 
+                <figure class="banner">
+                    <img class="banner__img" src="images/banner.jpg" alt="">
+                </figure>
                 <h1 class="title title--smaller">Meet the crew!</h1>
-                <div class="banner"></div>
 
                 <section class="section">
                     <h2 class="section__title" id="matt_damon">Matt Damon</h2>
