--- a/Assignment1/ratings.html
+++ b/Assignment1/ratings.html
@@ -14,12 +14,11 @@
     <body>
         <!-- The header for the logo, we could also put the nav inside the header eventually -->
         <!-- Also, the header is shared among pages -->
-        <header>
+        <header class="page-header">
 
             <!-- Logo can come here -->
-
             <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
+                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -43,9 +42,11 @@
                 </ul>
             </nav>
         </header>
-        <main>
+
+
+        <main class="content">
             <article id="ratings">
-                <h1 class="title">Ratings</h1>
+                <h1 class="section__title">Ratings</h1>
 
                 <section class="section">
                     <table class="table">
