Contact page + formatting
Added the contact page and also did some styling on it. Furthermore inverted the images in the footer

--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -48,7 +48,7 @@
                 <figure class="banner">
                     <img class="banner__img" src="images/banner.jpg" alt="">
                 </figure>
-                <h1 class="title title--smaller">Meet the crew!</h1>
+                <h1 class="title title--white title--smaller">Meet the crew!</h1>
 
                 <section class="section">
                     <h2 class="section__title" id="matt_damon">Matt Damon</h2>
