adding descriptions to images

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -54,7 +54,7 @@
 
                 <!-- Refactored -->
                 <figure class="banner">
-                    <img class="banner__img" src="images/banner.jpg" alt="">
+                    <img class="banner__img" src="images/banner.jpg" alt="Banner of the website showing Matt Damon on Mars">
                 </figure>
                 
 
@@ -80,7 +80,7 @@
                         <li class="cast__member">
                             <a class="cast__link" href="cast.html#matt_damon">
                                 <figure class="cast__figure">
-                                    <img class="cast__img" src="images/matt_damon_FP.jpg" >
+                                    <img class="cast__img" src="images/matt_damon_FP.jpg" alt="An avatar picture of Matt Damon">
                                     <figcaption class="cast__caption">Matt Damon as Mark Watney</figcaption>
                                 </figure>
                             </a>
@@ -88,7 +88,7 @@
                         <li class="cast__member">
                             <a class="cast__link" href="cast.html#jessica_chastain">
                                 <figure class="cast__figure">
-                                    <img class="cast__img" src="images/jessica_chastain_FP.jpg">
+                                    <img class="cast__img" src="images/jessica_chastain_FP.jpg" alt="An avatar picture of Jessica Chastain">
                                     <figcaption class="cast__caption">Jessica Chastain as Melissa Lewis</figcaption>
                                 </figure>
                             </a>
@@ -96,7 +96,7 @@
                         <li class="cast__member">
                             <a class="cast__link" href="cast.html#kristen_wiig">
                                 <figure class="cast__figure">
-                                    <img class="cast__img" src="images/Kristin_Wiig_FP.jpg">
+                                    <img class="cast__img" src="images/Kristin_Wiig_FP.jpg" alt="An avatar picture of Annie Montrose">
                                     <figcaption class="cast__caption">Kristen Wiig as Annie Montrose</figcaption>
                                 </figure>
                             </a>
@@ -224,11 +224,11 @@
                 <h2 class="section__title">Stay Connected</h2>
                 <p class="subtitle">Follow 'The Martian' on Social Media and Visit the Official Website:</p>
                 <div class="movie-links__block">
-                    <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian"><img src="images/www_icon.svg" class="movie-links__img"></a>
-                    <a class="movie-links__link" href="https://twitter.com/MartianMovie"><img src="images/tw_icon.svg" class="movie-links__img"></a>
-                    <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/"><img src="images/fb_icon.svg" class="movie-links__img"></a>
-                    <a class="movie-links__link" href="https://www.instagram.com/martianmovie/"><img src="images/in_icon.svg" class="movie-links__img"></a>
-                    <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies"><img src="images/yt_icon.svg" class="movie-links__img"></a>
+                    <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian"><img src="images/www_icon.svg" class="movie-links__img" alt="A picture of the icon of a website"></a>
+                    <a class="movie-links__link" href="https://twitter.com/MartianMovie"><img src="images/tw_icon.svg" class="movie-links__img" alt="A picture of the icon of Wwitter"></a>
+                    <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/"><img src="images/fb_icon.svg" class="movie-links__img" alt="A picture of the icon of a Facebook"></a>
+                    <a class="movie-links__link" href="https://www.instagram.com/martianmovie/"><img src="images/in_icon.svg" class="movie-links__img" alt="A picture of the icon of Instagram"></a>
+                    <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies"><img src="images/yt_icon.svg" class="movie-links__img" alt="A picture of the icon of Youtube"></a>
                 </div>
             </section>
         </footer>
