--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <!-- Moet voor elke pagina apart -->
         <title>The Martian | Background</title>
         <meta name="description" content="">
-        <!-- ------------------------------>
 
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +17,7 @@
 
             <!-- Logo can come here -->
             <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;"/>
+                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;">
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -52,7 +51,7 @@
 
                 <section class="section">
                     <h2 class="section__title" id="matt_damon">Matt Damon</h2>
-                    <img src="images/matt_damon.jfif" alt="" class="cast__element__img">
+                    <img src="images/matt_damon.jfif" alt="An image showing Matt Damon" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Matt Damon is an exceptional American actor who has graced the screens in numerous blockbuster hits. Interestingly, he began his career in the late 1980s with minor roles in both films and television shows. However, he gained widespread recognition for his breakout performance in "Good Will Hunting", which he co-wrote with his friend and fellow actor, Ben Affleck. The film was a commercial success, and Damon earned an Academy Award for Best Original Screenplay, along with a nomination for Best Actor.
                         Since then, Damon has gone on to star in several other critically acclaimed and commercially successful films such as the "Bourne" series, "Ocean's Eleven" trilogy, "The Martian," and "Ford v Ferrari." His performances have garnered multiple Academy Award nominations and other awards, including a Golden Globe and a Screen Actors Guild Award.
@@ -68,7 +67,7 @@
 
                 <section class="section">
                     <h2 class="section__title cast__element__title" id="jessica_chastain">Jessica Chastain</h2>
-                    <img src="images/jessica_chastain.jfif" alt="" class="cast__element__img">
+                    <img src="images/jessica_chastain.jfif" alt="An image showing Jessica Chastain" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Jessica Chastain's movies was Born on March 24, 1977, in Sacramento, California, the American actress first appeared on TV in the mid-2000s with roles in "ER" and "Veronica Mars." But it was her role in "The Tree of Life" in 2011 that got her nominated for a Golden Globe for Best Supporting Actress.
                         From there, Chastain went on to play in films such as "Take Shelter" and "The Help," and ofcourse not to forget, her performances in "Zero Dark Thirty," "Interstellar," "A Most Violent Year," and "Molly's Game" were just amazing. Her role of Maya in "Zero Dark Thirty" got her a Golden Globe and an Oscar nomination for Best Actress.
@@ -82,7 +81,7 @@
 
                 <section class="section">
                     <h2 class="section__title cast__element__title" id="kristen_wiig">Kristen Wiig</h2>
-                    <img src="images/kristen_wiig.jfif" alt="" class="cast__element__img">
+                    <img src="images/kristen_wiig.jfif" alt="An image showing Kristen Wiig" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Kristen Wiig is an actress and comedian. She was born on August 22, 1973, in Canandaigua, New York.
                         Wiig got her start in the comedy world as a member of the improvisation group: "The Groundlings" in Los Angeles. She later joined the cast of the sketch series "Saturday Night Live," where she became known for her weird  and funny characters and impressions. Her time on "Saturday Night Live" led to Wiig being recognized as an amazing comedian.
@@ -93,7 +92,7 @@
                         In the film, Wiig demonstrates her versatility as an actress, departing from her usual comedic roles to deliver a nuanced and restrained performance. Her portrayal of Annie Montrose adds to the realism and authenticity of the film, bringing a human touch to the intricate workings of the NASA team.
                         Of particular note are Wiig's scenes with Jeff Daniels, who plays the director of NASA. These tense and well-acted moments exemplify the complexities and challenges inherent in managing such a high-pressure situation. Overall, Wiig's performance in "The Martian" is a testament to her range and ability to deliver a strong performance in any genre.                    </p>
                 </section>
-            </section>
+            </article>
         </main>
         <footer>
 
