--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <!-- Moet voor elke pagina apart -->
         <title>The Martian | Contact</title>
         <meta name="description" content="">
-        <!-- ------------------------------>
-
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/style.css">
     </head>
@@ -19,7 +18,7 @@
 
             <!-- Logo can come here -->
             <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;"/>
+                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;">
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -46,21 +45,22 @@
         <main class="content">
             <article>
                 <figure class="banner">
-                    <img class="banner__img" src="images/banner.jpg" alt="">
+                    <img class="banner__img" src="images/banner.jpg" alt="Banner of the website showing Matt Damon on Mars">
                 </figure>
 
                 <h1 class="title title--white title--smaller">CONTACT US!</h1>
 
-                <h2 class="section__title">Don't Hesitate To Contact Us!</h2>
+                <h2 class="section section__title">Don't Hesitate To Contact Us!</h2>
 
                 <section class="section contact-information">
-                    <p class="contact-information__text">
+                    <h3 class="contact-information__text">
                         Please use the contact form below to send us a message, and we will get back to you as soon as possible.
                         Alternatively, you can also reach us via email, phone, or social media. Our contact information is listed at the bottom of this page.
-                    </p>
+                    </h3>
                 </section>
 
                 <section class="section contact">
+                    <h2 class="section__title">Fill In Our Contact Form!</h2>
                     <form class="contact-form">
                         <label for="first_name" class="contact-form__label">First Name:</label>
                         <input type="text" id="first_name" name="first_name" class="contact-form__input" required><br>
@@ -79,12 +79,13 @@
                 </section>
 
                 <section class="section adress-block">
-                    <adress class="adress-block__text">
+                    <h2 class="section__title">Contact Us The Old Fashioned </h2>
+                    <address class="adress-block__text">
                         Written by Niek Grimbergen, Sileman Patang and Mattijs Gietman. <br>
                         Contact us on this <a href="mailto:the-martian-website-utrecht@gmail.com">email</a><br>
                         Heidelberglaan 8, 3584 CS Utrecht <br>
                         The Netherlands.
-                    </adress>
+                    </address>
                 </section>
             </article>
         </main>
