--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -53,10 +53,10 @@
                 <h2 class="section section__title">Don't Hesitate To Contact Us!</h2>
 
                 <section class="section contact-information">
-                    <h3 class="contact-information__text">
+                    <p class="section__paragraph">
                         Please use the contact form below to send us a message, and we will get back to you as soon as possible.
-                        Alternatively, you can also reach us via email, phone, or social media. Our contact information is listed at the bottom of this page.
-                    </h3>
+                        Alternatively, you can also reach us via email. Our contact information is listed at the bottom of this page.
+                    </p>
                 </section>
 
                 <section class="section contact">
@@ -79,7 +79,7 @@
                 </section>
 
                 <section class="section adress-block">
-                    <h2 class="section__title">Contact Us The Old Fashioned </h2>
+                    <h2 class="section__title">Contact Us The Old Fashioned Way!</h2>
                     <address class="adress-block__text">
                         Written by Niek Grimbergen, Sileman Patang and Mattijs Gietman. <br>
                         Contact us on this <a href="mailto:the-martian-website-utrecht@gmail.com">email</a><br>
