meer content ratings+ repsonsive

--- a/Assignment1/ratings.html
+++ b/Assignment1/ratings.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <!-- Moet voor elke pagina apart -->
         <title>The Martian | Ratings</title>
         <meta name="description" content="">
-        <!-- ------------------------------>
-
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -50,9 +48,11 @@
                 </figure>
                 <h1 class="title title--white">Ratings & Content info</h1>
 
+
                 <section class="section">
-                    <h1 class="section__title">Ratings</h1>
-                    <table class="table">
+                    <h2 class="section__title">Ratings</h2>
+                    <table class="table-ratings">
+
                         <thead class="table__header">
                             <tr>
                                 <th>Platform</th>
@@ -111,14 +111,28 @@
                 </section>
 
                 <section class="section">
-                    <h1 class="section__title"> Content info </h1>
+                    <h2 class="section__title"> Breakdown</h2>
+                    <p class="section__paragraph"> Here's a quick breakdown of what each of these ratings mean and how they are calculated: </p>
+                    <p class="section__paragraph">1. IMDb (Internet Movie Database) - This is a popular movie and TV show rating platform where users can rate movies on a scale of 1 to 10. The rating for "The Martian" on IMDb is 8.0 out of 10, which is a relatively high rating. This means that a majority of users who have rated the movie on IMDb have given it a positive score. 
+                        <br> 2. Rotten Tomatoes - Rotten Tomatoes is a review aggregation website that collects reviews from professional critics and calculates an overall score based on the percentage of positive reviews. "The Martian" has a rating of 91% on Rotten Tomatoes, which indicates that a vast majority of critics have given the movie positive reviews. 
+                        <br> 3. The Guardian is a popular UK-based newspaper that publishes movie reviews and ratings. The newspaper uses a rating system based on a scale of 1 to 5 stars. The Martian has received 4 stars which is considered to be an excellent movie. The reviewer highly recommends the movie and finds it to be well-made, entertaining, and thought-provoking. The reviewer may have some minor criticisms, but overall, the movie is highly praised.
+                        <br> 4. Google Users - This is the rating given by users on Google. It is an average of the scores given by people who have rated the movie on Google. In the case of "The Martian," the rating by Google users is 93%, indicating a high level of approval from those who have rated the movie.
+                        <br> 5. Metacritic - Metacritic is another review aggregation website that assigns a score to movies based on reviews from professional critics. The score is calculated on a scale of 0 to 100. "The Martian" has a score of 80 out of 100 on Metacritic, which is generally considered a positive score.
+                        <br> 6. Amazon Prime Video Rating - This is the rating given by users on Amazon Prime Video, based on their personal opinions after watching the movie. The rating is calculated on a scale of 1 to 5 stars, with 5 stars being the highest rating. As of my knowledge cutoff date of September 2021, "The Martian" has a rating of 4.7 out of 5 stars on Amazon Prime Video.
+                    </p>
+                    
+                    
+                </section>
+
+                <section class="section">
+                    <h2 class="section__title"> Content info </h2>
                     <p class="section__paragraph">
                         <b>Why is The Martian rated PG-13?</b> The Martian is rated PG-13 by the MPAA for some strong language, injury images, and brief nudity.
                     </p>
                     <p class="section__paragraph"> <b>Violence:</b> <br> A violent storm threatens the safety of a group of astronauts – one man is hit by debris and blown away by the wind. A character, stranded in a hostile environment, is in constant peril from the elements, a lack of oxygen and a decreasing food supply. A bloody injury is portrayed. A character preforms surgery on himself using medical instruments to extract a piece of metal from his belly – this detailed depiction includes images of blood and pain. Characters endure many perilous situations and incur various injuries, including burns from an explosion. The possibility of radiation poisoning is mentioned. In order to save one life, many risks are taken by others. </p>
                     <p class="section__paragraph"> <b>Sexual content: </b><br> A naked man is shown from the back, and his bare buttocks are seen. A couple of slang terms for male anatomy are used.</p>
-                    <p class="section__paragraph"> <b>Language</b> <br> The script includes frequent scatological slang, mild and moderate profanities, along with terms of deity. A strong sexual expletive is uttered twice, mouthed silently a couple more times, and alluded to on several other occasions.</P>
-                    <p class="section__paragraph"> <b>Alcohol/Drugs Use</b> <br> A character drinks alcohol during a stressful time.</p>
+                    <p class="section__paragraph"> <b>Language:</b> <br> The script includes frequent scatological slang, mild and moderate profanities, along with terms of deity. A strong sexual expletive is uttered twice, mouthed silently a couple more times, and alluded to on several other occasions.</P>
+                    <p class="section__paragraph"> <b>Alcohol/Drugs Use:</b> <br> A character drinks alcohol during a stressful time.</p>
                     </section>
             </article>
         </main>
