--- a/Assignment1/summary.html
+++ b/Assignment1/summary.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <!-- Moet voor elke pagina apart -->
         <title>The Martian | Summary</title>
         <meta name="description" content="">
-        <!-- ------------------------------>
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -45,15 +44,16 @@
 
 
 
-        <main class="content summary-content">
+        <main class="content">
             <article>
                 <figure class="banner">
                     <img class="banner__img" src="images/banner.jpg" alt="">
                 </figure>
+
                 <h1 class="title title--white">Summary</h1>
-                <section class="section summary-section"> 
-                    <h1 class="section__title summary-section__title"> Synopsis </h1>
-                        <p class="section__paragraph summary-section__paragraph">
+                <section class="section"> 
+                    <h2 class="section__title"> Synopsis </h2>
+                        <p class="section__paragraph">
                             "The Martian" is a 2015 science fiction film directed by Ridley Scott and starring Matt Damon as Mark Watney, a NASA astronaut who is stranded on Mars after his crew believes he has died during an emergency evacuation.   
                             <br>
                             The story begins with the Ares III mission to Mars, led by Commander Melissa Lewis (Jessica Chastain), which is hit by a massive storm. During the evacuation, Watney is hit by debris and presumed dead. The rest of the crew, consisting of Rick Martinez (Michael Peña), Beth Johanssen (Kate Mara), Chris Beck (Sebastian Stan), and Alex Vogel (Aksel Hennie), leave the planet without him.
@@ -71,19 +71,19 @@
                             <img src="images/the-martian-matt-damon.webp" alt="Picture of Mark Waney in Mars" class="summary-section__img">
                         </p>
 
-                        <p class="section__paragraph summary-section__paragraph"> 
+                        <p class="section__paragraph"> 
                         Produced through 20th Century Fox, the film is a coproduction of the United Kingdom and the United States. 
                         Producer Simon Kinberg began developing the film after Fox optioned the novel in March 2013, which Drew Goddard adapted into a screenplay and was initially attached to direct, but the film did not move forward. Scott replaced Goddard as director, and with Damon in place as the main character, production was approved. Filming began in November 2014 and lasted approximately seventy days. Twenty sets were built on one of the largest sound stages in the world in Budapest, Hungary. Wadi Rum in Jordan was also used for exterior filming.
                         
                     </p>
                 </section>
 
-                <section class="section plot-element">
-                    <h1 class="section__title plot-title"> Plot </h1>
-                    <p class="section__paragraph plot__element__content">
+                <section class="section">
+                    <h2 class="section__title"> Plot </h2>
+                    <p class="section__paragraph">
                     "The Martian" is a science fiction movie about an astronaut named Mark Watney (Matt Damon) who is left stranded on Mars after his crew members believe he has died during an emergency evacuation. Watney must use his skills and knowledge to survive on the harsh and inhospitable planet while attempting to make contact with Earth to arrange for a rescue mission. The story follows Watney as he faces numerous challenges and setbacks while trying to stay alive, and the efforts of his team on Earth and his former crew members to bring him back home safely. The film is a tale of human perseverance, resourcefulness, and cooperation in the face of extreme adversity.
                 </p>
-                <p class="section__paragraph plot__element__content"> Watney awakens after the storm, injured and with a low-oxygen warning. 
+                <p class="section__paragraph"> Watney awakens after the storm, injured and with a low-oxygen warning. 
                     He returns to the crew's surface habitat ("Hab") and treats his wound. 
                     As Watney recovers, he begins a video diary. Unable to communicate with Earth, his only chance of rescue is the next Mars mission. In four years, the Ares IV will land 3,200 kilometers (2,000 mi) away at the Schiaparelli crater. 
                     Watney's immediate concern is food; being a botanist, he creates a garden inside the Hab using Martian soil fertilized with the crew's bio-waste and manufactures water from leftover rocket fuel. He then cultivates potatoes using whole potatoes reserved for a special Thanksgiving meal. 
