--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -94,8 +94,19 @@
                 </section>
             </article>
         </main>
+        <!-- footer is for copyright or contact or something like that and is shared among pages -->
         <footer>
-
+            <section class="section section--dark section--top-rounded movie-links">
+                <h2 class="section__title">Stay Connected</h2>
+                <p class="subtitle">Follow 'The Martian' on Social Media and Visit the Official Website:</p>
+                <div class="movie-links__block">
+                    <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian"><img src="images/www_icon.svg" class="movie-links__img" alt="A picture of the icon of a website"></a>
+                    <a class="movie-links__link" href="https://twitter.com/MartianMovie"><img src="images/tw_icon.svg" class="movie-links__img" alt="A picture of the icon of Wwitter"></a>
+                    <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/"><img src="images/fb_icon.svg" class="movie-links__img" alt="A picture of the icon of a Facebook"></a>
+                    <a class="movie-links__link" href="https://www.instagram.com/martianmovie/"><img src="images/in_icon.svg" class="movie-links__img" alt="A picture of the icon of Instagram"></a>
+                    <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies"><img src="images/yt_icon.svg" class="movie-links__img" alt="A picture of the icon of Youtube"></a>
+                </div>
+            </section>
         </footer>
     </body>
 </html>
