--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -52,15 +52,15 @@
 
                 <h2 class="section section__title">Don't Hesitate To Contact Us!</h2>
 
-                <section class="section contact-information">
+                <section class="section section--contact contact-information">
                     <p class="section__paragraph">
                         Please use the contact form below to send us a message, and we will get back to you as soon as possible.
                         Alternatively, you can also reach us via email. Our contact information is listed at the bottom of this page.
                     </p>
                 </section>
 
-                <section class="section contact">
-                    <h2 class="section__title">Fill In Our Contact Form!</h2>
+                <section class="section section--contact contact">
+                    <h2 class="section__title">Fill Out Our Contact Form!</h2>
                     <form class="contact-form">
                         <label for="first_name" class="contact-form__label">First Name:</label>
                         <input type="text" id="first_name" name="first_name" class="contact-form__input" required><br>
@@ -78,7 +78,7 @@
                     </form>
                 </section>
 
-                <section class="section adress-block">
+                <section class="section section--contact adress-block">
                     <h2 class="section__title">Contact Us The Old Fashioned Way!</h2>
                     <address class="adress-block__text">
                         Written by Niek Grimbergen, Sileman Patang and Mattijs Gietman. <br>
@@ -89,8 +89,19 @@
                 </section>
             </article>
         </main>
+        <!-- footer is for copyright or contact or something like that and is shared among pages -->
         <footer>
-
+            <section class="section section--dark section--top-rounded movie-links">
+                <h2 class="section__title">Stay Connected</h2>
+                <p class="subtitle">Follow 'The Martian' on Social Media and Visit the Official Website:</p>
+                <div class="movie-links__block">
+                    <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian"><img src="images/www_icon.svg" class="movie-links__img" alt="A picture of the icon of a website"></a>
+                    <a class="movie-links__link" href="https://twitter.com/MartianMovie"><img src="images/tw_icon.svg" class="movie-links__img" alt="A picture of the icon of Wwitter"></a>
+                    <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/"><img src="images/fb_icon.svg" class="movie-links__img" alt="A picture of the icon of a Facebook"></a>
+                    <a class="movie-links__link" href="https://www.instagram.com/martianmovie/"><img src="images/in_icon.svg" class="movie-links__img" alt="A picture of the icon of Instagram"></a>
+                    <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies"><img src="images/yt_icon.svg" class="movie-links__img" alt="A picture of the icon of Youtube"></a>
+                </div>
+            </section>
         </footer>
     </body>
 </html>
