some more small changes

--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -43,7 +43,7 @@
             </nav>
         </header>
         <main class="content">
-            <article>
+            <article class="contact-content">
                 <figure class="banner">
                     <img class="banner__img" src="images/banner.jpg" alt="Banner of the website showing Matt Damon on Mars">
                 </figure>
