--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -50,9 +50,8 @@
 
                 <h1 class="title title--white title--smaller">CONTACT US!</h1>
 
-                <h2 class="section section__title">Don't Hesitate To Contact Us!</h2>
-
                 <section class="section section--contact contact-information">
+                    <h2 class="section__title">Don't Hesitate To Contact Us!</h2>
                     <p class="section__paragraph">
                         Please use the contact form below to send us a message, and we will get back to you as soon as possible.
                         Alternatively, you can also reach us via email. Our contact information is listed at the bottom of this page.
