--- a/Assignment1/info.html
+++ b/Assignment1/info.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="styles/style.css">
+        <script src="js/main.js" type="module" defer></script>
     </head>
     <body>
-        <header>
+        <header class="page-header">
 
         </header>
         <main>
 
         </main>
         <footer>
-            
+
         </footer>
     </body>
 </html>
