--- a/Assignment1/info.html
+++ b/Assignment1/info.html
@@ -12,7 +12,24 @@
 
         </main>
         <footer>
+            <label for="element-select">Select an element to style:</label>
+            <select name="element" id="element-select">
+                <option value="body">Body</option>
+                <option value="header">Header</option>
+                <option value="footer">Footer</option>
+                <option value="aside">Aside</option>
+                <option value="article">Article</option>
+                <option value="section">Section</option>
+            </select>
+            <label for="styling-select">What do you want to style?</label>
+            <select name="styling" id="styling-select">
+                <option value="font-size">Font size</option>
+                <option value="background-color">Background color</option>
+            </select>
+            <label for="value-select">Value:</label>
+            <select name="val" id="value-select">
 
+            </select>
         </footer>
     </body>
 </html>
