--- a/Assignment1/info.html
+++ b/Assignment1/info.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles/style.css">
-        <script src="js/main.js" type="module" defer></script>
+
     </head>
     <body>
         <header class="page-header">
@@ -31,5 +31,6 @@
 
             </select>
         </footer>
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
